// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions scanStatus 1`] = `
Array [
  Object {
    "type": "status",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions statusUpdate 1`] = `
Object {
  "type": "status",
  "value": Object {
    "test": "test",
  },
}
`;
